# AgentFlow

./: .gitignore  CI_CD_PR_SUMMARY.md  README.md  pyproject.toml  serve.js  serve.py  setup.cfg
.github/: CI_CD_GUIDE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
sandbox/: agentflow-gemini-demo.yaml  gemini-example.yaml  viewer-standalone.html
scripts/: ci-check.ps1  ci-check.sh
src/agentflow/: config.py
src/agentflow/adapters/: GEMINI_README.md  __init__.py  claude_cli.py  codex_cli.py  copilot_cli.py  gemini_cli.py  mock_adapter.py
src/agentflow/cli/: __init__.py  entry.py  evaluation.py  flow_spec.py  pipeline.py  plan.py
src/agentflow/viewer/: __init__.py  routes.py  server.py
src/agentflow/viewer/static/: viewer.css  viewer.js
src/agentflow/viewer/templates/: index.html
tests/live/: test_agentflow_cli_live.py  test_claude_adapter_live.py  test_codex_adapter_live.py  test_gemini_adapter_live.py
tests/unit/: test_cli.py  test_codex_adapter.py  test_copilot_adapter.py  test_gemini_adapter.py
