[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "AgentFlow planning and execution utilities with Codex CLI integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "Flask>=3.0",
    "langgraph>=0.2.40"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-dotenv>=0.5",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.5",
    "bandit>=1.7",
    "safety>=2.3"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
    "live: marks tests that hit real Codex APIs and require OPENAI_API_KEY",
    "slow: marks tests as slow running",
    "integration: marks integration tests"
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_optional = false

[[tool.mypy.overrides]]
module = ["yaml.*", "flask.*", "pytest.*", "dotenv.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[project.scripts]
agentflow = "agentflow.cli:main"
